fix wrapping of seriescolor divs. Add baseline label

--- a/speedcenter/media/css/main.css
+++ b/speedcenter/media/css/main.css
@@ -186,15 +186,7 @@ div.about_content { text-align: left; }
   padding: 0.2em;
 }
 .boxbody ul li { padding-left: 0.3em; }
-.boxbody ul li ul { margin: 0; padding: 0; }
-.boxbody ul li ul h4 { margin: 0 0 0.4em; padding: 0; font-size: 1em; font-weight: normal;}
-.boxbody ul li ul li { margin-left: 1em; }
 .boxbody input { margin-left: 0; vertical-align: top; }
-/* .boxbody label { vertical-align: top; } */
-/*.boxbody input[type="text"] {
-    margin-left: 0; margin-right: 2.5em; margin-bottom: 0.2em; float: right; width: 2em;
-}*/
-/* .boxbody select {float: right;} */
 #options li { margin-bottom: 0.8em; }
 .seriescolor { float: right; margin-top: 2px; height: 13px; width: 14px; }
 
